Wed Dec 28 17:07:23 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* examples/AMH/Sink_Server/Makefile.am:
	* examples/Buffered_AMI/Makefile.am:
	* examples/Buffered_Oneways/Makefile.am:

	  Regenerated.

	* examples/AMH/Sink_Server/Sink_Server.mpc:
	* examples/Buffered_AMI/Buffered_AMI.mpc:
	* examples/Buffered_Oneways/Buffered_Oneways.mpc:

          Add *_IDL projects for compiling *.idl files.  This eliminates
          duplicate rules that would otherwise result when Makefile.am's
          are aggregated in the automake build.

Wed Dec 28 13:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Native_Exceptions/Native_Exceptions.mpc:
        * tests/UNKNOWN_Exception/UNKNOWN_Exception.mpc:
          Removed setting of idlflags, native exceptions are the default
          now and the overruling of the idlflags gives problem when
          trying to extend TAO_IDLFLAGS from the platform_macros.GNU
          file

Wed Dec 28 11:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Cubit/TAO/MT_Cubit/client.cpp:
          Made this test compiling again with VxWorks 6.1, the WIND_TCB
          struct has been changed and shouldn't be used directly anymore

Wed Dec 28 10:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/RTScheduling/Synch_i.cpp:
          Cast number of seconds explicitly to time_t

Wed Dec 28 10:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils_T.cpp:
          Applied a workaround for Borland to not give argument not used
          warnings. This problem has been reported to Borland to get it
          fixed in the next version.

Wed Dec 28 09:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Trader/Trader_Interfaces.cpp:
          Fixed 64bit conversion warning

Wed Dec 28 09:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
