@@ -1,29 +1,55 @@
 // -*- MPC -*-
 // $Id$
 
+project(*IDL): taoidldefaults {
+  IDL_Files {
+    Consumer.idl
+    Notifier.idl
+  }
+  custom_only = 1
+}
+
 project(Callback_Quoter notifier): namingexe, utils {
+  after += *IDL
   Source_Files {
     Notifier_i.cpp
     Notifier_Input_Handler.cpp
     notifier.cpp
+    NotifierS.cpp
+    NotifierC.cpp
+    ConsumerC.cpp
+  }
+  IDL_Files {
   }
 }
 
 project(Callback_Quoter consumer): namingexe, portableserver {
+  after += *IDL
   Source_Files {
     Consumer_Input_Handler.cpp
     Consumer_Signal_Handler.cpp
     Consumer_Handler.cpp
     consumer.cpp
     Consumer_i.cpp
+    ConsumerS.cpp
+    ConsumerC.cpp
+    NotifierC.cpp
+  }
+  IDL_Files {
   }
 }
 
 project(Callback_Quoter supplier): namingexe, portableserver {
+  after += *IDL
   Source_Files {
     Supplier_i.cpp
     Supplier_Timer_Handler.cpp
     supplier.cpp
     Consumer_i.cpp
+    ConsumerS.cpp
+    ConsumerC.cpp
+    NotifierC.cpp
+  }
+  IDL_Files {
   }
 }
